--- a/platform.html
+++ b/platform.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>E-Noer Auto Platform</title>
 
-    <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       referrerpolicy="no-referrer"
     />
 
-    <!-- Theme tokens -->
     <style>
       :root{
         --bg:#f5f6f8; --panel:#ffffff; --muted:#6b7280; --ink:#0f172a;
@@ -48,7 +45,6 @@
 
   <body class="min-h-screen bg-[var(--bg)] text-[var(--ink)]">
     <div class="flex min-h-screen">
-      <!-- SIDEBAR -->
       <aside class="w-64 bg-white border-r border-gray-200 hidden lg:flex flex-col">
         <div class="h-14 flex items-center gap-2 px-4 border-b">
           <i class="fa-solid fa-circle text-[var(--brand)]"></i>
@@ -77,9 +73,7 @@
         </div>
       </aside>
 
-      <!-- MAIN -->
       <main class="flex-1">
-        <!-- TOPBAR -->
         <header class="h-14 bg-white border-b flex items-center justify-between px-4">
           <div class="flex items-center gap-3">
             <button class="btn btn-icon lg:hidden" id="openSidebar"><i class="fa-solid fa-bars"></i></button>
@@ -95,7 +89,6 @@
           </div>
         </header>
 
-        <!-- RDW KENTEKEN INTAKE -->
         <section class="px-4 py-4">
           <div class="bg-white border rounded-xl p-4">
             <div class="flex items-center gap-3 flex-wrap">
@@ -120,7 +113,6 @@
           </div>
         </section>
 
-        <!-- VOERTUIGEN LIJST (demo item) -->
         <section class="px-4 pb-8">
           <div class="flex items-center justify-between mb-2">
             <div class="text-sm text-gray-500 table-head">Overzicht</div>
@@ -158,7 +150,6 @@
       </main>
     </div>
 
-    <!-- FULLSCREEN VEHICLE DETAIL (partial) -->
     <dialog id="vehicleDetail" class="w-[min(1100px,96vw)] max-h-[90vh] rounded-2xl border p-0 overflow-hidden">
       <form method="dialog" class="bg-white">
         <div class="h-12 flex items-center justify-between px-4 border-b">
@@ -167,13 +158,11 @@
         </div>
 
         <div class="p-4 grid lg:grid-cols-2 gap-4 max-h-[70vh] overflow-auto">
-          <!-- Summary card -->
           <section class="border rounded-xl p-4">
             <div class="text-sm text-gray-500 mb-2">Samenvatting</div>
             <div class="kv" id="vdSummary"></div>
           </section>
 
-          <!-- Details -->
           <section class="border rounded-xl p-4">
             <div class="text-sm text-gray-500 mb-2">Technische details</div>
 
@@ -210,43 +199,32 @@
       </form>
     </dialog>
 
-    <!-- TOAST -->
     <div id="toast" class="fixed bottom-4 left-1/2 -translate-x-1/2 px-4 py-2 rounded-lg border bg-white shadow hidden"></div>
 
-    <!-- JS -->
     <script type="module">
-      // ========= IMPORTANT =========
-      // On production (prodrivenet.com) we use SAME-ORIGIN: ''.
-      // In local dev (file server / VSCode Live Server) we fall back to http://localhost:3001.
+      const $ = (sel) => document.querySelector(sel);
 
-const API_BASE =
-  (location.hostname === 'prodrivenet.com' || location.hostname === 'www.prodrivenet.com')
-    ? ''  // same-origin in production
-    : 'http://localhost:3001'; // dev
+      function toast(msg, kind='ok'){
+        const el = $('#toast');
+        el.textContent = msg || '';
+        el.classList.remove('hidden');
+        el.style.borderColor = kind==='error' ? 'var(--danger)' : kind==='warn' ? 'var(--warning)' : '#e5e7eb';
+        clearTimeout(el._t);
+        el._t = setTimeout(()=> el.classList.add('hidden'), 2500);
+      }
 
-async function getRdwData(kenteken){
-    const plate = kenteken.trim().toUpperCase().replace(/-/g,'');
-  const r = await fetch(`${API_BASE}/api/rdw?kenteken=${encodeURIComponent(plate)}`);
-  if (!r.ok) {
-    let msg = `RDW ${r.status}`;
-    try { const j = await r.json(); msg = j.detail || j.error || msg; } catch {}
-    throw new Error(msg);
-  }
-  return r.json();
-}
+      const PROD_HOSTS = new Set(['prodrivenet.com','www.prodrivenet.com','e-noer.nl','www.e-noer.nl']);
+      const API_BASE = PROD_HOSTS.has(location.hostname) ? '' : 'http://localhost:3001';
 
-      // ---- RDW proxy + normalizer
       async function fetchRDW(kenteken){
-        const res = await fetch(`${API_BASE}/api/rdw?kenteken=${encodeURIComponent(kenteken)}`);
+        const plate = kenteken.trim().toUpperCase().replace(/-/g,'');
+        const res = await fetch(`${API_BASE}/api/rdw?kenteken=${encodeURIComponent(plate)}`);
         if(!res.ok){
           let msg = `RDW ${res.status}`;
           try { const j = await res.json(); msg = j.detail || j.error || msg; } catch {}
           throw new Error(msg);
         }
-        const data = await res.json();
-        const s = data.summary || {};
-        const d = data.details || {};
-        return { s, d, raw: data };
+        return res.json();
       }
 
       const rdwKV = $('#rdwKV');
@@ -254,11 +232,12 @@ async function getRdwData(kenteken){
       let lastFetch = null;
 
       $('#fetchRDW')?.addEventListener('click', async ()=>{
-        const kenteken = $('#kenteken').value.trim().replace(/-/g,'').toUpperCase();
+        const kenteken = $('#kenteken').value.trim();
         if(!kenteken) return toast('Vul een kenteken in','error');
         try{
-          lastFetch = await fetchRDW(kenteken);
-          const { s } = lastFetch;
+          const data = await fetchRDW(kenteken);
+          lastFetch = data;
+          const s = data.summary || {};
           rdwKV.innerHTML = '';
           const pairs = {
             'Merk/Type': `${s.merk ?? '-'} ${s.handelsbenaming ?? ''}`.trim(),
@@ -279,13 +258,11 @@ async function getRdwData(kenteken){
         }
       });
 
-      // FULLSCREEN VEHICLE DETAIL
       const vehicleDetail = $('#vehicleDetail');
       $('#openVehicleDetail')?.addEventListener('click', ()=>{
         if(!lastFetch){ toast('Eerst RDW-gegevens ophalen','error'); return; }
-        const { s, d } = lastFetch;
+        const { summary: s, details: d } = lastFetch;
 
-        // Summary
         const kv = $('#vdSummary'); kv.innerHTML='';
         const sumPairs = {
           'Kenteken': s.kenteken,
@@ -306,7 +283,6 @@ async function getRdwData(kenteken){
           kv.append(kEl,vEl);
         });
 
-        // Basis
         const b = d?.basis || {};
         const kb = $('#vdBasis'); kb.innerHTML='';
         const basisPairs = {
@@ -326,7 +302,6 @@ async function getRdwData(kenteken){
           kb.append(kEl,vEl);
         });
 
-        // Brandstoffen
         const bf = $('#vdBrandstoffen'); bf.innerHTML='';
         (d?.brandstoffen || []).forEach(f=>{
           const line = document.createElement('div');
@@ -335,7 +310,6 @@ async function getRdwData(kenteken){
           bf.append(line);
         });
 
-        // Kleuren
         const kl = $('#vdKleuren'); kl.innerHTML='';
         (d?.kleuren || []).forEach(k=>{
           const line = document.createElement('div');
@@ -344,7 +318,6 @@ async function getRdwData(kenteken){
           kl.append(line);
         });
 
-        // Carrosserie
         const car = $('#vdCarrosserie'); car.innerHTML='';
         (d?.carrosserie || []).forEach(c=>{
           const line = document.createElement('div'); line.className='text-sm';
@@ -352,7 +325,6 @@ async function getRdwData(kenteken){
           car.append(line);
         });
 
-        // Assen
         const as = $('#vdAssen'); as.innerHTML='';
         (d?.assen || []).forEach(a=>{
           const line = document.createElement('div'); line.className='text-sm';
@@ -363,7 +335,6 @@ async function getRdwData(kenteken){
         vehicleDetail.showModal();
       });
 
-      // Search filter
       $('#search')?.addEventListener('input', e=>{
         const q = e.target.value.toLowerCase();
         document.querySelectorAll('#vehicleList .veh-row').forEach(row=>{
