--- a/platform.html
+++ b/platform.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>E-Noer Auto Platform</title>
+    <title>ProDriveNet</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" referrerpolicy="no-referrer" />
@@ -41,13 +41,13 @@
       <aside class="w-64 bg-white border-r border-gray-200 hidden lg:flex flex-col">
         <div class="h-14 flex items-center gap-2 px-4 border-b">
           <i class="fa-solid fa-circle text-[var(--brand)]"></i>
-          <span class="font-extrabold tracking-tight">E-Noer Auto</span>
+          <span class="font-extrabold tracking-tight">ProDriveNet</span>
         </div>
         <nav class="flex-1 overflow-auto scroll-slim py-3">
           <div class="px-3 text-xs uppercase text-gray-500 mb-2">Menu</div>
           <ul class="space-y-1 px-2">
             <li><a class="flex items-center gap-3 px-3 py-2 rounded-md hover:bg-gray-50" href="#"><i class="fa-solid fa-gauge"></i>Dashboard</a></li>
-            <li class="px-3 py-1 text-xs uppercase text-gray-400">RDW-diensten</li>
+            <li class="px-3 py-1 text-xs uppercase text-gray-400">Voertuigen</li>
             <li><a class="flex items-center gap-3 px-3 py-2 rounded-md bg-gray-100 font-semibold" href="#"><i class="fa-solid fa-car-side"></i>Voertuigen</a></li>
             <li><a class="ml-9 flex items-center gap-3 px-3 py-2 rounded-md hover:bg-gray-50" href="#"><i class="fa-solid fa-car"></i>Auto’s</a></li>
             <li><a class="ml-9 flex items-center gap-3 px-3 py-2 rounded-md hover:bg-gray-50" href="#"><i class="fa-solid fa-motorcycle"></i>Motoren</a></li>
